<resources>
    <string name="app_name">LISTA ZAKUPÓW</string>

    <string name="go_to_product_list_activity_button_text">LISTA ZAKUPÓW</string>
    <string name="go_to_options_activity_button_text">OPCJE</string>
    <string name="go_to_maps_activity_button_text">MAPA</string>

    <string name="save_button_text">ZAPISZ</string>
    <string name="delete_button_text">USUŃ</string>
    <string name="add_button_text">DODAJ</string>
    <string name="edit_button_text">EDYTUJ</string>

    <string name="saved_toast_text">Zapisano</string>

    <string name="title_size_label">Rozmiar nazwy aplikacji:</string>
    <string name="title_color_label">Kolor nazwy aplikacji:</string>

    <string name="product_name_label">Nazwa:</string>
    <string name="product_quantity_label">Ilość:</string>
    <string name="product_price_label">Cena:</string>
    <string name="product_is_bought_label">Kupione:</string>

    <string name="products_list_name_label">Nazwa</string>
    <string name="products_list_quantity_label">Ilość</string>
    <string name="products_list_price_label">Cena</string>
    <string name="products_list_is_bought_label">Kupione</string>

    <string-array name="title_sizes_array">
        <item>Mały</item>
        <item>Duży</item>
    </string-array>

    <string-array name="title_colors_array">
        <item>Różowy</item>
        <item>Czarny</item>
    </string-array>

    <string name="db_name">SHOPPING_LIST_DB</string>

    <string name="fields_warning_message">Wszystkie pola muszą być wypełnione</string>
    <string name="loading_product_error_message">Błąd: nie udało się wczytać produktu</string>
    <string name="nonexistent_product_message">Produkt nie istnieje</string>

    <string name="operation_failed">Operacja nie powiodła się</string>

    <string name="price_pattern">%.2fzł</string>
    <string name="title_activity_login">Logowanie</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Hasło</string>
    <string name="action_sign_up">ZAREJESTRUJ</string>
    <string name="action_log_in">ZALOGUJ</string>
    <string name="action_sign_in_short">ZAREJESTRUJ</string>
    <string name="error_invalid_email">Niepoprawny email</string>
    <string name="error_invalid_password">Hasło musi mieć minimum 6 znaków</string>
    <string name="error_incorrect_password">Niepoprawne hasło</string>
    <string name="error_field_required">To pole jest wymagane</string>
    <string name="user_created">Utworzono użytkownika</string>
    <string name="title_activity_maps">Map</string>
</resources>
